``` feat(platform): 新增contract契约包并完善网关文档
- 新增atlas-richie-contract跨服务共享契约包到base模块
- 在component模块中新增atlas-richie-component-ai子模块
- 移除已废弃的atlas-richie-general-service模块
- 更新网关服务文档，补充应用名称、端口、配置信息
- 完善Nacos服务发现和配置导入说明
- 添加镜像构建、可观测性相关文档内容
- 优化各技术文档中的表格格式和内容展示
```